= Release Notes for Moise

== Version 0.10

- default type of goals is *performance*
* norms for *performance* goals have `done(Sch,Goal,Ag)` as the _what_,
* while *achievement* goals have `satisfied(Sch,Goal)` as the _what_
- *permissions* are perceived by the agents (with the same arguments as obligations)
- use NPL prohibitions when we don't want to regiment some property (like role cardinality). See normative specification of src/examples/writePaper/wp-os.xml.
- move to gradle
- move to GitHub

== Version 0.9

- last version at source forge