@@ -18,7 +18,8 @@ auction_id(0).
      createWorkspace("ora4mas");
      joinWorkspace("ora4mas",O4MWsp);
      
-     makeArtifact("auction","ora4mas.nopl.GroupBoard",["../auction-os.xml", auctionGroup, false, true ],GrArtId);
+     makeArtifact("auction","ora4mas.nopl.GroupBoard",["../auction-os.xml", auctionGroup],GrArtId);
+     startGUI[artifact_id(GrArtId)];
 	 adoptRole(auctioneer);
 	 focus(GrArtId).
 -!create_group[error(E), error_msg(M), reason(R)]
@@ -34,7 +35,8 @@ auction_id(0).
 
 +!create_scheme 
    <- ?auction_id(Id); .concat("sch",Id,Sch); // create a new scheme id
-      makeArtifact(Sch,"ora4mas.nopl.SchemeBoard",["../auction-os.xml", doAuction, false, true ],SchArtId);
+      makeArtifact(Sch,"ora4mas.nopl.SchemeBoard",["../auction-os.xml", doAuction],SchArtId);
+      startGUI[artifact_id(SchArtId)];
       focus(SchArtId);
       addScheme(Sch);
 	  commitMission(mAuctioneer)[artifact_id(SchArtId)].
