@@ -22,7 +22,7 @@
       commitMission(Mission)[artifact_id(ArtId)]. 
 
 // obligation to achieve a goal      
-+obligation(Ag,Norm,achieved(Scheme,Goal,Ag),Deadline)[artifact_id(ArtId)]
++obligation(Ag,Norm,done(Scheme,Goal,Ag),Deadline)[artifact_id(ArtId)]
     : .my_name(Ag)
    <- //.print(" ---> working to achieve ",Goal," in scheme ",Scheme);
       !Goal[scheme(Scheme)];
